--- a/01.Web/iu-presupuesto/package.json
+++ b/01.Web/iu-presupuesto/package.json
@@ -39,6 +39,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.2",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
